RESOLVED FIXED240996
ArrayBuffer species should be ignored when cloning a Typed Array
https://bugs.webkit.org/show_bug.cgi?id=240996
Summary ArrayBuffer species should be ignored when cloning a Typed Array
Ross Kirsling
Reported 2022-05-26 19:06:32 PDT
ArrayBuffer species should be ignored when cloning a Typed Array
Attachments
Ross Kirsling
Comment 1 2022-05-26 19:17:45 PDT
EWS
Comment 2 2022-05-26 22:21:33 PDT
Committed r294929 (251040@main): <https://commits.webkit.org/251040@main> Reviewed commits have been landed. Closing PR #1082 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-05-26 22:22:14 PDT
Note You need to log in before you can comment on or make changes to this bug.